--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rizki</title>
+    <title>rizkiasdsadsad</title>
   </head>
   <body>
-    <h1>git konflik v2</h1>
+    <h1>git konflik v2asdsadsadsads</h1>
   </body>
 </html>
